--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ code {
 
 #root {
   min-height: 100vh;
-  background-color: burlywood;
+  background-color: rgba(220, 255, 50, .35);
   display: flex;
   flex-direction: column;
 }
