--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import url('bootstrap/dist/css/bootstrap.css');
 @import url('font-awesome/css/font-awesome.css');
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
